word-wrap property added in topic display for correct visualization

--- a/public/stylesheets/topics.css
+++ b/public/stylesheets/topics.css
@@ -15,7 +15,7 @@ body > div#pageslide-blanket{background:none}
 
 .related-content li{width: 150px; float: left;}
 article{padding: 40px; background:url('../images/bg-article.png') repeat-x 0 2px white; display: block; min-height: 449px;}
-.topic-content p{margin-top:10px; line-height: 22px; position: relative}
+.topic-content p{margin-top:10px;line-height: 22px;position:relative;word-wrap:break-word}
 .topic-content > p:first-child{margin-top: 0;}
 .topic-content p > a{font-style: italic} 
 article > header{display:block;position:static;}
